--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@angular/animations": "^7.1.0",
+        "@angular/cdk": "^7.1.0",
         "@angular/common": "^7.0.1",
         "@angular/compiler": "^7.0.1",
-        "@angular/core": "^7.0.1",
+        "@angular/core": "^7.0.4",
         "@angular/forms": "^7.0.1",
+        "@angular/material": "^7.1.0",
         "@angular/platform-browser": "^7.0.1",
         "@angular/platform-browser-dynamic": "^7.0.1",
         "@angular/router": "^7.0.1",
         "core-js": "^2.5.7",
+        "npm": "^6.4.1",
         "rxjs": "^6.3.3",
         "zone.js": "^0.8.26"
     },
